# credit: https://stackoverflow.com/a/21028226/13933174
# the commit's SHA1, and whether the building workspace was dirty or not
# defines RPI_Version library which should be compiled into main

# include method for getting current git versioning info
include(GetGitRevisionDescription REQUIRED) # https://stackoverflow.com/a/4318642/13933174
git_describe_working_tree(GIT_DESC) # define GIT_DESC

#################### some additional git defines not included in package

execute_process(COMMAND
    "${GIT_EXECUTABLE}" describe --match=NeVeRmAtCh --always --abbrev=40 --dirty
    WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
    OUTPUT_VARIABLE GIT_SHA1
    ERROR_QUIET OUTPUT_STRIP_TRAILING_WHITESPACE
)


# the date of the commit
execute_process(COMMAND
    "${GIT_EXECUTABLE}" log -1 --format=%ad --date=local
    WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
    OUTPUT_VARIABLE GIT_DATE
    ERROR_QUIET OUTPUT_STRIP_TRAILING_WHITESPACE
)

# the subject of the commit
execute_process(COMMAND
    "${GIT_EXECUTABLE}" log -1 --format=%s
    WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
    OUTPUT_VARIABLE GIT_COMMIT_SUBJECT
    ERROR_QUIET OUTPUT_STRIP_TRAILING_WHITESPACE
)

# generate version.cpp (into binary dir)
# note: CMAKE_HELPERS_DIR comes from top level cmake file
set(VERSION_AUTOGEN_DIR "${CMAKE_CURRENT_BINARY_DIR}") # save in build dir so dont have to gitignore
configure_file("${CMAKE_CURRENT_SOURCE_DIR}/version.cpp.in" "${VERSION_AUTOGEN_DIR}/version.cpp" @ONLY)

add_library(RPI_Version
    ${VERSION_AUTOGEN_DIR}/version.cpp # autogenerated from version.cpp.in
)

# include created libs from other dirs -- comes after add executable
target_link_libraries(RPI_Version
)

target_compile_options(RPI_Version
    PRIVATE
)

set_target_properties(RPI_Version
    PROPERTIES LINKER_LANGUAGE CXX
)
